--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.core:core-ktx:1.6.0'
+
 //    implementation 'androidx.cardview:cardview:1.0.0'
 //    implementation 'com.google.android.gms:play-services-cronet:18.0.1'
 
